<resources>
    <string name="app_name">FitFlex</string>
    <string name="history_of_previous_session">History of previous session</string>
    <string name="bmi_calculator">Bmi calculator</string>
    <string name="start_button_to_start_the_session">Start button to start the session</string>
    <string name="bmi">BMI</string>
    <string name="history">History</string>
    <string name="start">Start</string>
    <string name="to_check_previous_workout_records">To check previous workout records</string>
    <string name="to_calculate_bmi">To calculate BMI</string>
    <string name="to_start_session">To start session</string>
    <string name="get_ready_in">Get Ready In</string>
    <string name="_30">30</string>
    <string name="_10">10</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="current_exercise">Current Exercise</string>
    <string name="finish">Finish</string>
    <string name="keep_it_up">Keep it Up!!!</string>
    <string name="fantastic_workout_well_done">Fantastic Workout, Well Done</string>
    <string name="this_will_stop_your_workout">This will stop your workout.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="are_you_sure_you_want_to_quit">Are you sure you want to quit?</string>
    <string name="pound_ft">pound/ft</string>
    <string name="kg_cm">kg/cm</string>
    <string name="enter_height">Height</string>
    <string name="enter_weight">Weight</string>
    <string name="your_bmi_result">Your BMI Result :</string>
    <string name="calculate">Calculate</string>
    <string name="kg_and_cm">Kg and Cm</string>
    <string name="lb_and_ft">Lb and Ft</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
</resources>