<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:excludeFromRecents="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/this_will_stop_your_workout"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/are_you_sure_you_want_to_quit"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/customDialogLeaveBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:backgroundTint="#FF0000"
            android:fontFamily="@font/tomorrow"
            android:gravity="center"
            android:text="@string/leave"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/customDialogStayBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FF00"
            android:fontFamily="@font/tomorrow"
            android:gravity="center"
            android:text="@string/stay"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>