<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bg">

    <!-- Your existing layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/finish_screen_gif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tomorrow"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/fantastic_workout_well_done"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tomorrow"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:text="@string/keep_it_up"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/finish_button"
            android:fontFamily="@font/tomorrow"
            android:gravity="center"
            android:paddingHorizontal="25dp"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </LinearLayout>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
